crates/nash-can/src/snapshots/nash_can__module__tests__to_public_union_open_passes_through.snap
---
source: crates/nash-can/src/module.rs
---
Some(
    InterfaceUnion {
        kind: KindScheme {
            bounds: [],
            kind: Base(
                Big,
            ),
            applications: [],
        },
        name: "Bool",
        parameters: [],
        ctors: [],
        alternatives: 2,
        options: Enum,
        visibility: Open,
    },
)
