crates/nash-can/src/snapshots/nash_can__module__tests__trait_declaration_unsupported.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntrait Eq 'a where\n    eq : 'a -> 'a -> bool\n"
---
[
    Unsupported {
        feature: "trait declaration",
        region: Region {
            start: Position {
                line: 3,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 26,
            },
        },
    },
]
