crates/nash-can/src/snapshots/nash_can__module__tests__tuple_four_in_expr.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf = ( 1, 2, 3, 4 )\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 19,
                    },
                },
                value: Tuple {
                    first: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 7,
                            },
                            end: Position {
                                line: 3,
                                column: 8,
                            },
                        },
                        value: Int(
                            1,
                        ),
                    },
                    second: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 10,
                            },
                            end: Position {
                                line: 3,
                                column: 11,
                            },
                        },
                        value: Int(
                            2,
                        ),
                    },
                    rest: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 13,
                                },
                                end: Position {
                                    line: 3,
                                    column: 14,
                                },
                            },
                            value: Int(
                                3,
                            ),
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 16,
                                },
                                end: Position {
                                    line: 3,
                                    column: 17,
                                },
                            },
                            value: Int(
                                4,
                            ),
                        },
                    ],
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
