crates/nash-can/src/snapshots/nash_can__module__tests__typed_def_in_let.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ng =\n    let\n        f : 'a -> 'a\n        f x = x\n    in\n    f 1\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 9,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "g",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 5,
                    },
                    end: Position {
                        line: 9,
                        column: 1,
                    },
                },
                value: Let {
                    definition: TypedDef {
                        context: [],
                        annotation: Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 13,
                                },
                                end: Position {
                                    line: 5,
                                    column: 21,
                                },
                            },
                            value: Lambda {
                                from: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 13,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 15,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                                to: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 19,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 21,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                            },
                        },
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 9,
                                },
                                end: Position {
                                    line: 6,
                                    column: 10,
                                },
                            },
                            value: "f",
                        },
                        free_vars: [
                            "a",
                        ],
                        args: [
                            TypedPattern {
                                pattern: Located {
                                    region: Region {
                                        start: Position {
                                            line: 6,
                                            column: 11,
                                        },
                                        end: Position {
                                            line: 6,
                                            column: 12,
                                        },
                                    },
                                    value: Var(
                                        "x",
                                    ),
                                },
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 13,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 15,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                            },
                        ],
                        body: Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 15,
                                },
                                end: Position {
                                    line: 6,
                                    column: 16,
                                },
                            },
                            value: VarLocal(
                                "x",
                            ),
                        },
                        typ: Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 19,
                                },
                                end: Position {
                                    line: 5,
                                    column: 21,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    },
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 8,
                                column: 5,
                            },
                            end: Position {
                                line: 8,
                                column: 8,
                            },
                        },
                        value: Call {
                            function: Located {
                                region: Region {
                                    start: Position {
                                        line: 8,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 8,
                                        column: 6,
                                    },
                                },
                                value: VarLocal(
                                    "f",
                                ),
                            },
                            arguments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 8,
                                            column: 7,
                                        },
                                        end: Position {
                                            line: 8,
                                            column: 8,
                                        },
                                    },
                                    value: Int(
                                        1,
                                    ),
                                },
                            ],
                        },
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
