crates/nash-can/src/snapshots/nash_can__module__tests__typed_def_top_level.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf : 'a -> 'a\nf x = x\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 5,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: TypedDef {
            context: [],
            annotation: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 13,
                    },
                },
                value: Lambda {
                    from: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 5,
                            },
                            end: Position {
                                line: 3,
                                column: 7,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                    to: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 11,
                            },
                            end: Position {
                                line: 3,
                                column: 13,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                },
            },
            name: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 1,
                    },
                    end: Position {
                        line: 4,
                        column: 2,
                    },
                },
                value: "f",
            },
            free_vars: [
                "a",
            ],
            args: [
                TypedPattern {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 4,
                                column: 3,
                            },
                            end: Position {
                                line: 4,
                                column: 4,
                            },
                        },
                        value: Var(
                            "x",
                        ),
                    },
                    typ: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 5,
                            },
                            end: Position {
                                line: 3,
                                column: 7,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 7,
                    },
                    end: Position {
                        line: 4,
                        column: 8,
                    },
                },
                value: VarLocal(
                    "x",
                ),
            },
            typ: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 11,
                    },
                    end: Position {
                        line: 3,
                        column: 13,
                    },
                },
                value: Var(
                    "a",
                ),
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
